--- a/samples/hotpotqa/hotpotqa_modified.ipynb
+++ b/samples/hotpotqa/hotpotqa_modified.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> NOTE: **The point of this notebook is to show higher accuracy at HotPotQA. With proper web-search tools, and proper formatting, there'd be a much higher success rate than what you'd get with this notebook. I've done my best to maintain the code from the original authors.**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -23,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,8 +43,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Setup"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,6 +78,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import wikienv, wrappers\n",
+    "env = wikienv.WikiEnv()\n",
+    "env = wrappers.HotPotQAWrapper(env, split=\"dev\")\n",
+    "env = wrappers.LoggingWrapper(env)\n",
+    "\n",
+    "def step(env, action):\n",
+    "    attempts = 0\n",
+    "    while attempts < 10:\n",
+    "        try:\n",
+    "            return env.step(action)\n",
+    "        except requests.exceptions.Timeout:\n",
+    "            attempts += 1"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -86,20 +120,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# GrammarFlow Setup "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Step(BaseModel):\n",
-    "    thought: str = Field(..., description=\"Concisely describe the \")\n",
+    "    thought: str = Field(..., description=\"Concisely describe your thought process in your current thinking step. Use your previous step's output to guide your current step.\")\n",
     "    action: str = Field(..., description=\"You only have 3 options: search | lookup | finish\")\n",
     "    action_input: str = Field(..., description=\"Your input to the above action.\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,85 +150,81 @@
     "  prompt = PromptBuilder() \n",
     "  prompt.add_section(\n",
     "    text=\"\"\"\n",
-    "  Goal: {question}\n",
+    "  {question}\n",
     "\n",
-    "  Your goal is to solve the above QA task in steps. First, think about what information you need to answer the question. \n",
-    "  Use `search` to get the information you need. This needs a single keyword or noun as input. If it can't find anything, itll give alternate keywords. You can find them in your thinking history below, use them to search again. \n",
-    "  Use `lookup` to find more information from the paragraph returned by search. This matches the action_input you give to setences in search. \n",
-    "  Use `finish` to return your final complete answer as input field. Use this if you believe you have enough information to completely answer the task.\"\"\",\n",
+    "  Your goal is to solve the above QA task in steps. First, think about what information you need to answer the question. You have access to tools as defined below:\n",
+    "  1. `search`: to get the information you need from WIKIPEDIA. This is not a search engine. This needs a single keyword or noun as input. \n",
+    "  2. `lookup`: to find more information from the paragraph returned by search. This matches the action_input you give to setences in search. \n",
+    "  3. `finish`: to return your final complete answer as input field. Use this if you believe you have enough information to completely answer the task.\"\"\", \n",
     "    placeholders=[\"question\"]\n",
     "  ) \n",
     "  prompt.add_section(\n",
     "    define_grammar=True\n",
     "  ) \n",
     "  prompt.add_section(\n",
-    "    text=\"\\nExample thinking process:{example}\\n\", \n",
-    "    placeholders=[\"example\"]\n",
-    "  )\n",
-    "  prompt.add_section(\n",
-    "    text=\"Create the next Step using the information available you to below.\\n\",\n",
-    "  )\n",
-    "  prompt.add_section(\n",
-    "    text=\"DO NOT REPEAT THOUGHTS OR ACTIONS FROM YOUR PAST. ENSURE EACH STEP IS UNIQUE. Below is the history of your thinking process and corresponding observations.\\n{history}\\n\",\n",
+    "    text=\"Use the below Similar: [] keywords for search. Context: \\n{history}\",\n",
     "    placeholders=[\"history\"],\n",
     "    enable_on=check_previous_interaction\n",
     "  ) \n",
+    "  prompt.add_section(\n",
+    "    text=\"Create the next [Step] {id_} using the information available above: \", \n",
+    "    placeholders=[\"id_\"]\n",
+    "  )\n",
     "  return prompt "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import wikienv, wrappers\n",
-    "env = wikienv.WikiEnv()\n",
-    "env = wrappers.HotPotQAWrapper(env, split=\"dev\")\n",
-    "env = wrappers.LoggingWrapper(env)\n",
     "example = wrappers.EXAMPLE\n",
+    "question = \"\" # Will be defined in later blocks. Re-using ReAct's example for now.\n",
     "\n",
-    "def step(env, action):\n",
-    "    attempts = 0\n",
-    "    while attempts < 10:\n",
-    "        try:\n",
-    "            return env.step(action)\n",
-    "        except requests.exceptions.Timeout:\n",
-    "            attempts += 1"
+    "# Helper functions \n",
+    "def load_history(history: dict): \n",
+    "  return \"\\n\".join([f\"\"\"thought {id_}: {value['thought']}\\naction {id_}: {value['action']}\\naction_input {id_}: {value['action_input']}\\nObservation {id_}: {value['observation']}\"\"\"\n",
+    "   for id_, value in history.items()])\n",
+    "\n",
+    "def log_step(response, observation, id_, to_print=True): \n",
+    "  if to_print:\n",
+    "    print('--------------------------')\n",
+    "    print('Step {}'.format(id_))\n",
+    "    print('Thought:', response.Step.thought)\n",
+    "    print('Action:', response.Step.action)\n",
+    "    print('Action Input:', response.Step.action_input)\n",
+    "    print('Observation:', observation)\n",
+    "    print('--------------------------')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "def webthink(idx=None, env=env, to_print=False): \n",
-    "  \n",
-    "  def log(st, st_=None): \n",
-    "    if to_print: \n",
-    "      if st_: print(st, st_)\n",
-    "      else: print(st)\n",
-    "\n",
     "  # Initializing Stateful vars\n",
     "  thought = None \n",
     "  action = None\n",
     "  observation = None\n",
     "  id_ = 1\n",
     "  history, history_ = {}, None\n",
+    "  n_calls, n_badcalls = 0, 0\n",
     "\n",
     "  # Initializing question\n",
     "  question = env.reset(idx=idx)\n",
-    "  print('Question: ', question)\n",
+    "  print(question)\n",
     "\n",
-    "  for i in range(10):\n",
+    "  for i in range(7):\n",
     "    if history:\n",
-    "      history_ = \"\\n\".join([f\"Thought {id_}: {value['thought']}\\nAction {id_}: {value['action']}\\nAction_Input {id_}: {value['action_input']}\\nObservation {id_}: {value['observation']}\" for id_, value in history.items()])\n",
+    "      history_ = load_history(history) # Initializes history every run \n",
     "\n",
     "    # The only major change we've made! \n",
     "    with Constrain(make_prompt()) as manager: \n",
     "      manager.set_config(\n",
-    "        format='xml'\n",
+    "        format='toml'\n",
     "      ) \n",
     "      manager.format_prompt(\n",
     "        placeholders={ \n",
@@ -204,83 +241,74 @@
     "        }\n",
     "      ) \n",
     "      \n",
-    "      response = llm(manager.prompt, temperature=0.01)\n",
-    "      log(response)\n",
-    "      response = manager.parse(response)  \n",
-    "      log('---------------')\n",
+    "      prompt = manager.prompt\n",
+    "      response = llm(prompt, temperature=0.01)\n",
+    "      n_calls += 1\n",
     "\n",
-    "      thought = response.Step.thought \n",
-    "      action = response.Step.action\n",
-    "      action_input = response.Step.action_input\n",
+    "      try: \n",
+    "        response = manager.parse(response)\n",
+    "        observation, r, done, info = step(env, f\"{response.Step.action}[{response.Step.action_input}]\")\n",
+    "        observation = observation.replace(\"\\\\n\", \" \")\n",
+    "      except Exception as e:\n",
+    "        n_badcalls += 1\n",
+    "        observation, done = \"Error in parsing. Follow the [Step] format and try again.\", False \n",
     "\n",
-    "    observation, r, done, info = step(env, f\"{action}[{action_input}]\")\n",
-    "    observation = observation.replace(\"\\\\n\", \" \")\n",
-    "\n",
-    "    # Logging statements \n",
-    "    log('--------------------------')\n",
-    "    log('---------------')\n",
-    "    log('Prompt:', manager.prompt)\n",
-    "    log('---------------')\n",
-    "    log('---------------')\n",
-    "    print('Step {}'.format(id_))\n",
-    "    log('Thought:', thought)\n",
-    "    log('Action:', action)\n",
-    "    log('Action Input:', action_input)\n",
-    "    log('Observation:', observation)\n",
-    "    log('--------------------------')\n",
+    "    log_step(response, observation, id_, to_print=to_print)\n",
     "    \n",
     "    history[id_] = { \n",
-    "      \"thought\": thought, \n",
-    "      \"action\": action, \n",
-    "      \"action_input\": action_input, \n",
+    "      \"thought\": response.Step.thought, \n",
+    "      \"action\": response.Step.action, \n",
+    "      \"action_input\": response.Step.action_input, \n",
     "      \"observation\": observation\n",
     "    }\n",
+    "\n",
+    "    print(id_)\n",
     "    id_ += 1\n",
+    "\n",
     "    if done: \n",
-    "      final = action_input\n",
     "      break \n",
     "\n",
     "  if not done:\n",
     "      final = \"Failed\"\n",
     "      observation, r, done, info = step(env, \"finish[]\")\n",
     "\n",
-    "  return final, info['gt_answer'], id_"
+    "  info.update({'n_calls': n_calls, 'n_badcalls': n_badcalls, 'steps': id_})\n",
+    "\n",
+    "  return r, info"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "idxs = list(range(7405))\n",
-    "random.Random(233).shuffle(idxs)\n",
+    "idxs = list(range(7409))\n",
+    "random.Random(221).shuffle(idxs)\n",
     "\n",
-    "errors = []\n",
-    "logs = {} \n",
+    "rs = []\n",
+    "infos = [] \n",
+    "bad_calls = 0\n",
     "old_time = time.time()\n",
-    "for i in idxs[:5]:\n",
-    "    try: \n",
-    "        action_input, answer, id_ = webthink(i, env)\n",
-    "        logs[i] = {\n",
-    "            'action_input': action_input,\n",
-    "            'answer': answer, \n",
-    "            'steps': id_\n",
-    "        }\n",
-    "        print('Answer:', answer)\n",
-    "        print('Action Input:', action_input)\n",
-    "        print('-----------')\n",
-    "        print()\n",
-    "    except: \n",
-    "        errors += [i] "
+    "for i in idxs[:4]:\n",
+    "    r, info = webthink(i, to_print=False)\n",
+    "    rs.append(info['em'])\n",
+    "    bad_calls += info['n_badcalls']\n",
+    "    infos.append(info)\n",
+    "    print('RESULTS: ', sum(rs), len(rs), sum(rs) / len(rs), (time.time() - old_time) / len(rs))\n",
+    "    print('--------------------------')\n",
+    "    print()\n",
+    "\n",
+    "print('Bad calls: ', bad_calls) \n",
+    "print(infos)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# 👍"
+   ]
   }
  ],
  "metadata": {
