--- a/samples/hotpotqa/hotpotqa_modified.ipynb
+++ b/samples/hotpotqa/hotpotqa_modified.ipynb
@@ -4,7 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> NOTE: **The point of this notebook is to show higher accuracy at HotPotQA. With proper web-search tools, and proper formatting, there'd be a much higher success rate than what you'd get with this notebook. I've done my best to maintain the code from the original authors.**"
+    "> NOTE: **The point of this notebook is to show a negligble 'n_badcalls' value (where the model outputs something unparseable) at HotPotQA.**\n",
+    "> **With proper web-search tools, and proper formatting, there'd be a much higher success rate than what you'd get with this notebook. For comparison purposes, I've done my best to maintain the code from the original authors.**"
    ]
   },
   {
