--- a/samples/bert_finetuning/annotator.ipynb
+++ b/samples/bert_finetuning/annotator.ipynb
@@ -38,21 +38,177 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting grammarflow==0.0.6\n",
+      "  Downloading GrammarFlow-0.0.6-py3-none-any.whl (18 kB)\n",
+      "Installing collected packages: grammarflow\n",
+      "  Attempting uninstall: grammarflow\n",
+      "    Found existing installation: GrammarFlow 0.0.5\n",
+      "    Uninstalling GrammarFlow-0.0.5:\n",
+      "      Successfully uninstalled GrammarFlow-0.0.5\n",
+      "Successfully installed grammarflow-0.0.6\n",
+      "\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m23.0.1\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m24.0\u001b[0m\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip install --upgrade pip\u001b[0m\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "%pip install grammarflow==0.0.7"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from dotenv import load_dotenv, find_dotenv\n",
-    "load_dotenv(find_dotenv())\n",
-    "\n",
-    "import os\n",
-    "import openai\n",
-    "from grammarflow import *\n",
-    "from pydantic import BaseModel, Field\n",
-    "from typing import List, Optional\n",
-    "import random\n",
+    "import re\n",
     "import time\n",
-    "import re "
+    "import random\n",
+    "from typing import List, Optional\n",
+    "from pydantic import BaseModel, Field\n",
+    "from grammarflow import *\n",
+    "import openai\n",
+    "import os\n",
+    "from dotenv import load_dotenv, find_dotenv\n",
+    "load_dotenv(find_dotenv())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Name: openai\n",
+      "Version: 1.14.1\n",
+      "Summary: The official Python library for the openai API\n",
+      "Home-page: \n",
+      "Author: \n",
+      "Author-email: OpenAI <support@openai.com>\n",
+      "License: \n",
+      "Location: /home/aksha/.pyenv/versions/3.9.18/lib/python3.9/site-packages\n",
+      "Requires: anyio, distro, httpx, pydantic, sniffio, tqdm, typing-extensions\n",
+      "Required-by: langchain-openai\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "%pip show openai"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Name: llama_cpp_python\n",
+      "Version: 0.2.50\n",
+      "Summary: Python bindings for the llama.cpp library\n",
+      "Home-page: \n",
+      "Author: \n",
+      "Author-email: Andrei Betlen <abetlen@gmail.com>\n",
+      "License: MIT\n",
+      "Location: /home/aksha/.pyenv/versions/3.9.18/lib/python3.9/site-packages\n",
+      "Requires: diskcache, jinja2, numpy, typing-extensions\n",
+      "Required-by: \n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "%pip show llama-cpp-python"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Name: tiktoken\n",
+      "Version: 0.6.0\n",
+      "Summary: tiktoken is a fast BPE tokeniser for use with OpenAI's models\n",
+      "Home-page: \n",
+      "Author: Shantanu Jain\n",
+      "Author-email: shantanu@openai.com\n",
+      "License: MIT License\n",
+      "        \n",
+      "        Copyright (c) 2022 OpenAI, Shantanu Jain\n",
+      "        \n",
+      "        Permission is hereby granted, free of charge, to any person obtaining a copy\n",
+      "        of this software and associated documentation files (the \"Software\"), to deal\n",
+      "        in the Software without restriction, including without limitation the rights\n",
+      "        to use, copy, modify, merge, publish, distribute, sublicense, and/or sell\n",
+      "        copies of the Software, and to permit persons to whom the Software is\n",
+      "        furnished to do so, subject to the following conditions:\n",
+      "        \n",
+      "        The above copyright notice and this permission notice shall be included in all\n",
+      "        copies or substantial portions of the Software.\n",
+      "        \n",
+      "        THE SOFTWARE IS PROVIDED \"AS IS\", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR\n",
+      "        IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,\n",
+      "        FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE\n",
+      "        AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER\n",
+      "        LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,\n",
+      "        OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE\n",
+      "        SOFTWARE.\n",
+      "        \n",
+      "Location: /home/aksha/.pyenv/versions/3.9.18/lib/python3.9/site-packages\n",
+      "Requires: regex, requests\n",
+      "Required-by: langchain-openai\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "%pip show tiktoken "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Name: pydantic\n",
+      "Version: 1.9.0\n",
+      "Summary: Data validation and settings management using python 3.6 type hinting\n",
+      "Home-page: https://github.com/samuelcolvin/pydantic\n",
+      "Author: Samuel Colvin\n",
+      "Author-email: s@muelcolvin.com\n",
+      "License: MIT\n",
+      "Location: /home/aksha/.pyenv/versions/3.9.18/lib/python3.9/site-packages\n",
+      "Requires: typing-extensions\n",
+      "Required-by: autodoc-pydantic, chromadb, confection, fastapi, gto, inflect, langchain, langchain-core, langsmith, openai, pydantic-settings, replicate, spacy, thinc, weasel\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "%pip show pydantic"
    ]
   },
   {
@@ -91,9 +247,9 @@
    "source": [
     "def tag_abstract(abstract, materials, conditions, processes):\n",
     "    words = re.findall(r'\\w+|[^\\w\\s]', abstract)\n",
-    "    \n",
+    "\n",
     "    tags = ['O'] * len(words)\n",
-    "    \n",
+    "\n",
     "    def tag_words(word_list, tag_suffix):\n",
     "        for word in word_list:\n",
     "            start = 0\n",
@@ -101,19 +257,21 @@
     "                found_at = abstract.find(word, start)\n",
     "                if found_at == -1:\n",
     "                    break\n",
-    "                token_index = len(re.findall(r'\\w+|[^\\w\\s]', abstract[:found_at]))\n",
+    "                token_index = len(re.findall(\n",
+    "                    r'\\w+|[^\\w\\s]', abstract[:found_at]))\n",
     "                if token_index < len(tags):\n",
     "                    tags[token_index] = 'B' + tag_suffix\n",
     "                    for i in range(token_index + 1, min(token_index + len(re.findall(r'\\w+|[^\\w\\s]', word)), len(tags))):\n",
     "                        tags[i] = 'I' + tag_suffix\n",
     "                start = found_at + 1\n",
-    "    \n",
+    "\n",
     "    tag_words(materials, '-MATERIALS')\n",
     "    tag_words(conditions, '-CONDITIONS')\n",
     "    tag_words(processes, '-PROCESSES')\n",
-    "    \n",
-    "    tagged_abstract = '\\n'.join([f'{word} {tag}' for word, tag in zip(words, tags)])\n",
-    "    \n",
+    "\n",
+    "    tagged_abstract = '\\n'.join(\n",
+    "        [f'{word} {tag}' for word, tag in zip(words, tags)])\n",
+    "\n",
     "    return tagged_abstract"
    ]
   },
@@ -130,10 +288,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Annotations(BaseModel): \n",
-    "    materials: List[str] = Field(..., description=\"Only nouns that count as materials in experiments (such as types of chromatography, purification, methods, preparation, study, etc)\")\n",
-    "    conditions: List[str]= Field(..., description=\"Conditions used within the experiments (like temperature units, quantity units, mathematical units, percentages, coefficients, any numbers)\")\n",
-    "    processes: List[str]= Field(..., description=\"Only nouns and verbs for processes within the experiments (like factor names, rate, yield, etc)\")"
+    "class Annotations(BaseModel):\n",
+    "    materials: List[str] = Field(\n",
+    "        ..., description=\"Only nouns that count as materials in experiments (such as types of chromatography, purification, methods, preparation, study, etc)\")\n",
+    "    conditions: List[str] = Field(\n",
+    "        ..., description=\"Conditions used within the experiments (like temperature units, quantity units, mathematical units, percentages, coefficients, any numbers)\")\n",
+    "    processes: List[str] = Field(\n",
+    "        ..., description=\"Only nouns and verbs for processes within the experiments (like factor names, rate, yield, etc)\")"
    ]
   },
   {
@@ -143,9 +304,10 @@
    "outputs": [],
    "source": [
     "SampleAnnotations = Annotations(\n",
-    "  materials=['silica resin'], \n",
-    "  conditions=['10µm, 20µm, 50µm',  'only 10µm silica resin', 'yield (>96%)', 'productivity (> 1kg/kg-resin/day)'],\n",
-    "  processes=['chiral separation']\n",
+    "    materials=['silica resin'],\n",
+    "    conditions=['10µm, 20µm, 50µm',  'only 10µm silica resin',\n",
+    "                'yield (>96%)', 'productivity (> 1kg/kg-resin/day)'],\n",
+    "    processes=['chiral separation']\n",
     ")"
    ]
   },
@@ -162,29 +324,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "prompt = PromptBuilder() \n",
+    "prompt = PromptBuilder()\n",
     "prompt.add_section(\n",
-    "  text=\"\"\"\n",
+    "    text=\"\"\"\n",
     "Your role is that of a DATA ANNOTATOR for research paper abstracts. You are expected to identify the materials used, different processes involved, and conditions mentioned in the abstract. \n",
     "I want you to look at the abstract given below and return all the key phrases you find. Every str object within the list you return for each of the tags must contain at least 2 words and not exceed 8 words. \n",
     "\"\"\"\n",
-    ") \n",
-    "prompt.add_section(\n",
-    "  define_grammar = True\n",
     ")\n",
     "prompt.add_section(\n",
-    "  text=\"\"\"\n",
+    "    define_grammar=True\n",
+    ")\n",
+    "prompt.add_section(\n",
+    "    text=\"\"\"\n",
     "Here is an example: \n",
     "\n",
     "Abstract: Of the three particle sizes studied (10µm, 20µm, 50µm) only 10µm silica resin was able to produce purified API at the yield (>96%) and productivity (> 1kg/kg-resin/day) necessitated by the project. The second case study uses DoE studies to identify critical process parameters of column load, mobile phase solvent ratio and basic modifier level for a low-resolution, preparative, chiral separation.\n",
     "Annotations: \n",
     "{sample} \n",
-    "\"\"\", \n",
-    "  placeholders=[\"sample\"]\n",
+    "\"\"\",\n",
+    "    placeholders=[\"sample\"]\n",
     ")\n",
     "prompt.add_section(\n",
-    "  text=\"Remember that your role is to automate the data annotation process for a chemistry based project. Begin!\\nAbstract: {abstract}\\nAnnotations:\", \n",
-    "  placeholders=[\"abstract\"]\n",
+    "    text=\"Remember that your role is to automate the data annotation process for a chemistry based project. Begin!\\nAbstract: {abstract}\\nAnnotations:\",\n",
+    "    placeholders=[\"abstract\"]\n",
     ")"
    ]
   },
@@ -224,12 +386,12 @@
     "    )\n",
     "\n",
     "    manager.format_prompt(placeholders={\n",
-    "                          \"abstract\": abstract, \n",
+    "                          \"abstract\": abstract,\n",
     "                          \"sample\": XML.format(SampleAnnotations)\n",
-    "                          }, \n",
+    "                          },\n",
     "                          grammars=[{\n",
     "                              'model': [Annotations]},\n",
-    "                          ]\n",
+    "    ]\n",
     "    )\n",
     "\n",
     "    llm_response = llm(manager.prompt)\n",
@@ -242,7 +404,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "materials, conditions, processes = response.Annotations.materials, response.Annotations.conditions, response.Annotations.processes"
+    "materials, conditions, processes = (\n",
+    "    response.Annotations.materials,\n",
+    "    response.Annotations.conditions,\n",
+    "    response.Annotations.processes,\n",
+    ")"
    ]
   },
   {
@@ -254,8 +420,8 @@
      "data": {
       "text/plain": [
        "(['vegetable oils', 'acetonitrile', 'water'],\n",
-       " ['80.8% to 109.7%', 'less than 11.7%', '0.35 to 45.4ng/g'],\n",
-       " ['liquid chromatography', 'mass spectrometry', 'liquid-liquid extraction', 'calibration approach', 'recovery', 'validation', 'detection'])"
+       " ['80.8% to 109.7%', '11.7%', '0.35 to 45.4ng/g'],\n",
+       " ['liquid chromatography-quadrupole exactive orbitrap mass spectrometry', 'liquid–liquid extraction process', 'external calibration approach'])"
       ]
      },
      "execution_count": 11,
@@ -314,11 +480,11 @@
       ", O\n",
       "liquid B-PROCESSES\n",
       "chromatography I-PROCESSES\n",
-      "- O\n",
-      "quadrupole O\n",
-      "exactive O\n",
-      "orbitrap O\n",
-      "mass B-PROCESSES\n",
+      "- I-PROCESSES\n",
+      "quadrupole I-PROCESSES\n",
+      "exactive I-PROCESSES\n",
+      "orbitrap I-PROCESSES\n",
+      "mass I-PROCESSES\n",
       "spectrometry I-PROCESSES\n",
       "was O\n",
       "proposed O\n",
@@ -339,11 +505,11 @@
       "featured O\n",
       "a O\n",
       "successive O\n",
-      "liquid O\n",
-      "– O\n",
-      "liquid O\n",
-      "extraction O\n",
-      "process O\n",
+      "liquid B-PROCESSES\n",
+      "– I-PROCESSES\n",
+      "liquid I-PROCESSES\n",
+      "extraction I-PROCESSES\n",
+      "process I-PROCESSES\n",
       ", O\n",
       "in O\n",
       "which O\n",
@@ -367,8 +533,8 @@
       "greatly O\n",
       ". O\n",
       "External O\n",
-      "calibration B-PROCESSES\n",
-      "approach I-PROCESSES\n",
+      "calibration O\n",
+      "approach O\n",
       "revealed O\n",
       "good O\n",
       "quantification O\n",
@@ -382,7 +548,7 @@
       "conditions O\n",
       ", O\n",
       "the O\n",
-      "recovery B-PROCESSES\n",
+      "recovery O\n",
       "ranging O\n",
       "from O\n",
       "80 B-CONDITIONS\n",
@@ -398,9 +564,9 @@
       "relative O\n",
       "standard O\n",
       "deviation O\n",
-      "less B-CONDITIONS\n",
-      "than I-CONDITIONS\n",
-      "11 I-CONDITIONS\n",
+      "less O\n",
+      "than O\n",
+      "11 B-CONDITIONS\n",
       ". I-CONDITIONS\n",
       "7 I-CONDITIONS\n",
       "% I-CONDITIONS\n",
@@ -435,7 +601,7 @@
       "validated O\n",
       ". O\n",
       "The O\n",
-      "detection B-PROCESSES\n",
+      "detection O\n",
       "of O\n",
       "20 O\n",
       "commercial O\n",
